--- a/index.html
+++ b/index.html
@@ -3,135 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Portfolio</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-    <!-- CSS -->
+    <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-
-<!-- ================= NAVBAR ================= -->
-<nav class="navbar">
-    <div class="nav-container">
-        <div class="nav-brand">
-            <i class="fas fa-code"></i>
-            <span>TEAM Portfolio</span>
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-brand">
+                <i class="fas fa-code"></i>
+                
+                <span> Sr Portfolio</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#skills" class="nav-link"><i class="fas fa-laptop-code"></i> Skills</a></li>
+                <li><a href="#courses" class="nav-link"><i class="fas fa-graduation-cap"></i> Courses</a></li>
+                <li><a href="#projects" class="nav-link"><i class="fas fa-project-diagram"></i> Projects</a></li>
+                <li><a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> Contact</a></li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </div>
-        <ul class="nav-menu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#courses">Courses</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
-</nav>
+    </nav>
 
-<!-- ================= HOME / TEAM ================= -->
-<section id="home" class="hero">
-    <h1 class="hero-title">WELCOME</h1>
-
-    <div class="profile-container">
-
-        <div class="profile-card">
-            <img src="vij.jpeg" alt="SR Hacker">
-            <h2>Vijay</h2>
-            <p>Web Developer</p>
+    <section id="home" class="hero">
+        <div class="profile-container">
+            <div class="profile-content">
+                <div class="profile-pic">
+                    <img src="SR.jpg" alt="Your Profile Picture">
+                </div>
+                <div class="profile-text">
+                    <h1><i class="fas fa-code"></i> Welcome to My Portfolio</h1>
+                    <p> my name is SR Hacker</p>
+                    <p>Web Developer & Coder</p>
+                </div>
+            </div>
         </div>
-        
-        <div class="profile-card">
-            <img src="nitinsir.jpg" alt="Prem Jeet">
-            <h2>Nitin</h2>
-            <p>Frontend Developer</p>
+    </section>
+
+    <section id="skills" class="section">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+            <div class="skill-card">
+                <i class="fab fa-html5"></i>
+                <h3>HTML</h3>
+            </div>
+            <div class="skill-card">
+                <i class="fab fa-css3-alt"></i>
+                <h3>CSS</h3>
+            </div>
+            <div class="skill-card">
+                <i class="fab fa-js"></i>
+                <h3>JavaScript</h3>
+            </div>
+            <div class="skill-card">
+                <i class="fab fa-java"></i>
+                <h3>Java</h3>
+            </div>
         </div>
+    </section>
 
-        <div class="profile-card">
-            <img src="dev.jpeg" alt="Rajan">
-            <h2>Devendra</h2>
-            <p>Software Developer</p>
+    <section id="courses" class="section">
+        <h2>Courses</h2>
+        <div class="courses-grid">
+            <div class="course-card">
+                <h3>Web Development Fundamentals</h3>
+                <p>Learn the basics of web development</p>
+            </div>
+            <div class="course-card">
+                <h3>Advanced Java</h3>
+                <p>Master Java programming</p>
+            </div>
+            <div class="course-card">
+                <h3>Responsive Design</h3>
+                <p>Create mobile-friendly websites</p>
+            </div>
         </div>
+    </section>
 
-        <div class="profile-card">
-            <img src="anki.jpeg" alt="Shani">
-            <h2>Ankit</h2>
-            <p>Backend Developer</p>
+    <section id="projects" class="section">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-shopping-cart"></i>
+                </div>
+                <div class="project-content">
+                    <h3>E-Commerce Website</h3>
+                    <p>A full-featured online shopping platform with cart and payment integration</p>
+                    <div class="project-tech">
+                        <span>HTML </span>
+                        <span>CSS </span>
+                        <span>JavaScript </span>
+                        <span>Java </span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
+                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-tasks"></i>
+                </div>
+                <div class="project-content">
+                    <h3>Task Manager App</h3>
+                    <p>A productivity app for managing daily tasks and projects</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
+                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <i class="fas fa-weather-sun"></i>
+                </div>
+                <div class="project-content">
+                    <h3>Weather Dashboard</h3>
+                    <p>Real-time weather tracking app with forecast and location services</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Java</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
+                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
 
-    </div>
-</section>
-
-<!-- ================= SKILLS ================= -->
-<section id="skills" class="section">
-    <h2>Skills</h2>
-    <div class="skills-grid">
-        <div class="skill-card"><i class="fab fa-html5"></i><h3>HTML</h3></div>
-        <div class="skill-card"><i class="fab fa-css3-alt"></i><h3>CSS</h3></div>
-        <div class="skill-card"><i class="fab fa-js"></i><h3>JavaScript</h3></div>
-        <div class="skill-card"><i class="fab fa-java"></i><h3>Java</h3></div>
-    </div>
-</section>
-
-<!-- ================= COURSES ================= -->
-<section id="courses" class="section">
-    <h2>Courses</h2>
-    <div class="courses-grid">
-        <div class="course-card">
-            <h3>Web Development</h3>
-            <p>HTML, CSS, JavaScript basics</p>
+    <section id="contact" class="section">
+        <h2>Contact Me</h2>
+        <div class="contact-container">
+            <a href="rajanbhai1918@gmail.com" class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <span>Email</span>
+            </a>
+            <a href="https://www.linkedin.com/in/premjeet-37804a2a9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="contact-item">
+                <i class="fab fa-linkedin"></i>
+                <span>LinkedIn</span>
+            </a>
+            <a href="https://github.com/shani1918" target="_blank" class="contact-item">
+                <i class="fab fa-github"></i>
+                <span>GitHub</span>
+            </a>
         </div>
-        <div class="course-card">
-            <h3>Advanced Java</h3>
-            <p>OOPs, JDBC, Servlet</p>
-        </div>
-        <div class="course-card">
-            <h3>Responsive Design</h3>
-            <p>Mobile friendly layouts</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- ================= PROJECTS ================= -->
-<section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="projects-grid">
+    <footer>
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+        <p> Create by SR HACKER</p>
+    </footer>
 
-        <div class="project-card">
-            <h3>E-Commerce Website</h3>
-            <p>Online shopping system with cart</p>
-        </div>
-
-        <div class="project-card">
-            <h3>Task Manager</h3>
-            <p>Daily task management app</p>
-        </div>
-
-        <div class="project-card">
-            <h3>Weather App</h3>
-            <p>Live weather forecast</p>
-        </div>
-
-    </div>
-</section>
-
-<!-- ================= CONTACT ================= -->
-<section id="contact" class="section">
-    <h2>Contact</h2>
-    <div class="contact-container">
-        <a href="pal9889742382@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-        <a href="https://github.com/shani1918" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <a href="#" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    </div>
-</section>
-
-<footer>
-    <p>© 2025 Team Portfolio | Created by MMIT Team Portfolio</p>
-</footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
