--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <section id="contact" class="section">
         <h2>Contact Me</h2>
         <div class="contact-container">
-            <a href="rajanbhai1918@gmail.com" class="contact-item">
+            <a href="vijay20053005@gmail.com" class="contact-item">
                 <i class="fas fa-envelope"></i>
                 <span>Email</span>
             </a>
@@ -171,7 +171,7 @@
 
     <footer>
         <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-        <p> Create by SR HACKER</p>
+        <p> Create by Vijay </p>
     </footer>
 
     <script src="script.js"></script>
