--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <i class="fab fa-linkedin"></i>
                 <span>LinkedIn</span>
             </a>
-            <a href="https://github.com/shani1918" target="_blank" class="contact-item">
+            <a href="https://github.com/Vijay892087" target="_blank" class="contact-item">
                 <i class="fab fa-github"></i>
                 <span>GitHub</span>
             </a>
