--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-brand">
                 <i class="fas fa-code"></i>
                 
-                <span> Sr Portfolio</span>
+                <span> Vijay Portfolio</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> Home</a></li>
